# Bheema

./: .gitignore  CMakeLists.txt  README.md  package.xml  pixi.toml  setup.cfg  setup.py
bheema/: __init__.py  bheema_node.py  centroidal_dynamics.py  centroidal_model.py  centroidal_mpc.py  com_ref.py  com_traj.py  contact_scheduler.py  convex_mpc_ros2.py  discreatization.py  g1_config.py  g1_mujoco.py  gait.py  gait_scheduler.py  height_validator.py  hlip_planner.py  leg_controller.py  main.py  model_validator.py  mpc.py  mujoco_model.py  plotter.py  reset_pose.py  state.py  task_definitions.py  test.py  visualizer.py  wbc.py  whole_body_controller.py
config/: controller.yaml  start_positions.xml
launch/: bheema.launch.py
tests/: diagnose.py  test_centroidal.py  test_closed_loop_walking.py  test_com.py  test_gait_scheduler.py  test_hlip.py  test_mpc.py  test_state.py  test_wbc.py
unitree_g1/: g1.urdf  g1_mjx.xml  g1_with_hands.urdf  g1_with_hands.xml  scene_with_hands.xml
unitree_g1/meshes/: converted_left_ankle_roll_link_333333ff.mtl  converted_left_shoulder_pitch_link_b2b2b2ff.mtl
